@@ -1,3 +1,8 @@
+Sun Mar 16 10:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c, gtktoolbar.c: Add menu items for edit position and swap
+		direction toolbar commands.
+
 Sat Mar 15 13:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gtkgame.c: Merge match/session analysis menu items.
